# Digital-FTE-Factory-Final-Hackathon-5-

./: .env  .env.example  .gitignore  Dockerfile  RUNBOOK.md  Readme.md  _pdf_text.txt  debug_result.py  docker-compose.yml  pyproject.toml  seed_kb.py
.specify/memory/: constitution.md
context/: brand-voice.md  company-profile.md  escalation-rules.md  product-docs.md  sample-tickets.json
dashboard/: package-lock.json
dashboard/app/: globals.css  layout.tsx
dashboard/components/: ChannelIcon.tsx  KPICard.tsx  SentimentBar.tsx  Sidebar.tsx  StatusBadge.tsx
dashboard/lib/: api.ts
production/agent/: __init__.py  customer_success_agent.py  formatters.py  prompts.py  tools.py
production/api/: __init__.py  main.py
production/channels/: __init__.py  gmail_handler.py  web_form_handler.py  whatsapp_handler.py
production/database/: __init__.py  queries.py  schema.sql
production/k8s/: deployments.yaml  services.yaml  setup.yaml
production/tests/: __init__.py  chaos_test.py  conftest.py  locustfile.py  multichannel_test.py  test_production.py
production/utils/: kafka_client.py
production/web-form/: SupportForm.jsx
production/workers/: __init__.py  learning_worker.py  message_processor.py  metrics_collector.py  recovery_worker.py
specs/: customer-success-fte-spec.md  discovery-log.md  skills-manifest.md  transition-checklist.md
specs/incubation/: dossier-setup.md  plan.md  spec.md  tasks.md  testing-spec.md
specs/integration/: plan.md  (+2 more)
src/: simulator.py
tests/: chaos_sim.py  conftest.py  load_test.py  test_incubation.py  test_multichannel_e2e.py
(+41 files in other folders)
